--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -21,7 +21,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="TAISEN.styles.css" rel="stylesheet" />
-    <link href="favicon.ico" rel="icon" type="image/x-icon" />
+    <link href="Images/favicon.ico" rel="icon" type="image/x-icon" />
 </head>
 
 <body>
