--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -25,11 +25,28 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
 
+
+    <div id="app">
+        <PageTitle>Taisen</PageTitle>
+
+        <link rel="icon" type="image/x-icon" href="~/Images/Favicon.ico" />
+        <h1> TAISEN Solutions </h1>
+        <h2>Conseil en cybersécurité des systèmes et logiciels informatiques</h2>
+        <p>
+            Taisen a pour objectif de sécuriser vos projets de manière adaptée et cohérente.
+            Face aux difficultés rencontrées pour la sécurisation des projets applicatifs,
+            Taisen propose une méthode à la fois réaliste, proche des développeurs et cohérente avec les objectifs des RSSI. <br>
+            Si vous avez déjà eu le sentiment que vos pentests, contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques,
+            vous êtes au bon endroit.
+            <br>
+        </p>
+        <h3>Chargement Webassembly et vérification d'integrité, cela peut prendre quelques secondes...</h3>
+
+    </div>
     <div id="blazor-error-ui">
-        An unhandled error has occurred.
-        <a href="" class="reload">Reload</a>
+        Erreur. Assurez vous d'utiliser TLS/HTTPS pour les contrôles d'intégrité'
+        <a href="" class="reload">Recharger la page</a>
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
