--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -41,7 +41,7 @@
             vous êtes au bon endroit.
             <br>
         </p>
-        <h3>Chargement Webassembly et vérification d'integrité, cela peut prendre quelques secondes...</h3>
+        <h3>Chargement Webassembly et vérification d'intégrité, cela peut prendre quelques secondes...</h3>
 
     </div>
     <div id="blazor-error-ui">
