--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -35,9 +35,9 @@
         <h2>Conseil en cybersécurité des systèmes et logiciels informatiques</h2>
         <p>
             Taisen a pour objectif de sécuriser vos projets de manière adaptée et cohérente.
-            Face aux difficultés rencontrées pour la sécurisation des projets applicatifs,
-            Taisen propose une méthode à la fois réaliste, proche des développeurs et cohérente avec les objectifs des RSSI. <br>
-            Si vous avez déjà eu le sentiment que vos pentests, contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques,
+            Face aux difficultés rencontrées pour la sécurisation des projets liés à l'infrastructure et aux applications, 
+            Taisen propose une méthode à la fois réaliste, proche des équipes techniques et cohérente avec les objectifs des RSSI. <br>
+            Si vous avez déjà eu le sentiment que vos tests d'intrusions, contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques, 
             vous êtes au bon endroit.
             <br>
         </p>
