--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -41,11 +41,13 @@
             vous êtes au bon endroit.
             <br>
         </p>
-        <h3>Chargement Webassembly et vérification d'intégrité, cela peut prendre quelques secondes...</h3>
+        <h3>Chargement des Webassemblies et vérification d'intégrité. Cela peut prendre quelques secondes. Assurez vous d'utiliser https/tls ainsi qu'un navigateur à jour.</h3>
 
     </div>
     <div id="blazor-error-ui">
-        Erreur. Assurez vous d'utiliser TLS/HTTPS pour les contrôles d'intégrité'
+        Erreur.
+        Assurez vous d'utiliser TLS/HTTPS pour les contrôles d'intégrité.
+        Certains navigateurs (anciens) peuvent ne pas supporter la technologie WebAssembly.
         <a href="" class="reload">Recharger la page</a>
         <a class="dismiss">🗙</a>
     </div>
