--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,7 +8,7 @@
     content="base-uri 'self';
              block-all-mixed-content;
              default-src 'self';
-             img-src data: https:;
+             img-src data: 'self';
              object-src 'none';
              script-src 'self' 
                         'sha256-v8v3RKRPmN4odZ1CWM5gw80QKPCCWMcpNeOmimNL2AA=' 
