--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="Content-Security-Policy" 
     content="base-uri 'self';
              block-all-mixed-content;
-             default-src 'self';
+             default-src 'self'
+                          wss://localhost:*;
              img-src data: 'self';
              object-src 'none';
              script-src 'self' 
