--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,6 +17,14 @@
              style-src 'self';
              upgrade-insecure-requests;">
     <meta name="description" content="TAISEN Solutions : services en cybersécurité et DevSecOps">
+    <meta property="og:title" content="TAISEN" />
+    <meta property="og:url" content="https://taisen.fr/" />
+    <meta property="og:image" content="https://taisen.fr/Images/Logov2.png" />
+    <meta property="og:description" content="Services en cybersécurité et DevSecOps, développement .NET, Methode SIMPLE, Sensibilisations et Formations en sécurité des systèmes d'information" />
+    <meta property="og:site_name" content="Taisen-Solutions" />
+    <meta property="og:type" content="article" />
+    <meta name="author" content="Michael Vacarella">
+
     <title>TAISEN</title>
     <base href="/" />
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
