--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -37,8 +37,10 @@
 
     <div id="app">
 
-        <div class= "bgBan">
+        <div class="bgBan">
+            <br>
             <img src="Images/Logov2.png" class="imgBan" alt="Conseil en systèmes et logiciels informatiques">
+            <br>
         </div>
         <center><hr class="line"></center>
         
@@ -47,11 +49,13 @@
             <h2>Une approche pragmatique et intelligente pour sécuriser votre système d'information</h2>
             <img src="Images/Ok.png" class="imgLogo" alt="accompagnement">
             <p>
-                Taisen a pour objectif de sécuriser vos projets de manière adaptée et cohérente.
+                Taisen est une microentreprise fondée en 2022. 
+                Cette structure me permet d'atteindre mon objectif : sécuriser vos projets de manière adaptée et cohérente.
                 Face aux difficultés rencontrées pour la sécurisation des projets liés à l'infrastructure et aux applications, 
-                Taisen propose une méthode à la fois réaliste, proche des équipes techniques et cohérente avec les objectifs des RSSI. <br>
+                Je propose une expertise technique réaliste, proche des équipes techniques et cohérente avec les objectifs des RSSI.
+                <br>
                 Si vous avez déjà eu le sentiment que, malgré vos efforts, vos contrôles de sécurité et processus fonctionnels ne vous apportent pas la maitrise réelle de vos risques, 
-                vous êtes au bon endroit.        
+                vous êtes au bon endroit.       
             </p>
             <br>
         </div>
@@ -62,11 +66,11 @@
             <img src="Images/Ok.png"class="imgLogo" alt="bonnes pratiques">
             <p> 
                 L'accompagnement technique et la réalisation des tests de sécurité au bon moment sont souvent les maillons manquant d'une démarche de sécurisation réussie.
-                Taisen souhaite apporter aux projets des solutions bas niveau leur permettant de maitriser leur niveau de sécurité. 
+                Avec Taisen, je souhaite apporter aux projets des solutions bas niveau leur permettant de maitriser leur niveau de sécurité. 
                 Des livrables adaptés et conformes aux bonnes pratiques offrent aux clients la possibilité de gérer en autonomie les enjeux de sécurité.
                 <br>
                 La méthode S.I.M.P.L.E est issue d'une capitalisation de l'expérience acquise auprès d'une centaine de projets applicatifs.
-                Les succès, mais aussi les échecs sont pris en compte, afin d'améliorer cette méthode de manière continue. 
+                Les succès mais aussi les échecs sont pris en compte, afin d'améliorer cette méthode de manière continue. 
                 Les bonnes pratiques de l'<a href="https://www.ssi.gouv.fr/">ANSSI</a>  et les standards de l'<a href="https://owasp.org/projects/">OWASP</a> sont intégrés à la méthode.
             </p>
             <form>
@@ -82,7 +86,7 @@
             <h2>Un panel d'audits de sécurité adapté à vos besoins</h2>
             <img src="Images/Ok.png"class="imgLogo" alt="audits de sécurité">
             <p> 
-                Afin d'évaluer le niveau de sécurité de votre système d'information, Taisen propose plusieurs types d'audits de sécurité.
+                Afin d'évaluer le niveau de sécurité de votre système d'information, je propose plusieurs types d'audits de sécurité.
                 Un effort tout particulier est porté sur les recommandations liées aux vulnérabilités découvertes. 
                 Ces "Quick-Wins" vous permettront de consolider rapidement la sécurité de vos actifs.        
             </p>
@@ -100,7 +104,7 @@
             <img src="Images/Ok.png"class="imgLogo" alt="méthode SIMPLE">
             <p>
                 Grâce à un temps dédié au retour d'expérience, à la prise de recul et au développement d'outillage et de processus efficients,
-                Taisen à l'ambition d'aller plus loin dans la sécurisation des projets applicatifs. Ce travail est consultable et open source. 
+                j'ai l'ambition d'aller plus loin dans la sécurisation des projets applicatifs. Ce travail est consultable et open source. 
             </p>
             <form>
                 <a href="https://github.com/Aif4thah">
@@ -116,7 +120,7 @@
             <img src="Images/Ok.png"class="imgLogo" alt="Formations et Sensibilisations">
             <p> 
                 Des formations destinées aux entreprises et aux écoles du numérique sont également proposées. 
-                Elles ont pour objectif de partager un contenu riche et à jour, permettant de progresser quel que soit le niveau initial.
+                Elles ont pour objectif de partager un contenu riche et à jour, permettant de progresser, quel que soit le niveau initial.
             </p>
             <form>
                 <a href="/Formations">
@@ -125,14 +129,7 @@
             </form>
             <br>
         </div>
-
-
-
-        <div class="loadBox">
-            Chargement...
-        </div>
-
-
+        
 
 
     </div>
