--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -35,27 +35,13 @@
 
 <body>
 
-
-
     <div id="app">
-
         <div class="bgDiv">
             <br>
             <h2>Une approche pragmatique et intelligente pour sécuriser votre système d'information</h2>
             <img src="Images/Ok.png" class="imgLogo" alt="accompagnement">
             <p>
-                Taisen est une microentreprise fondée en 2022.
-                Cette structure me permet d'atteindre mon objectif: sécuriser vos projets de manière adaptée et
-                cohérente.
-                Face aux difficultés rencontrées pour la sécurisation des projets liés à l'infrastructure et aux
-                applications,
-                Je propose une expertise technique réaliste, proche des équipes techniques et cohérente avec les
-                objectifs des RSSI.
-                <br>
-                Si vous avez déjà eu le sentiment que, malgré vos efforts, vos contrôles de sécurité et processus
-                fonctionnels ne vous apportent pas la maitrise réelle de vos risques,
-                vous êtes au bon endroit.
-                <br>
+                Taisen est une microentreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information
             </p>
         </div>
         <div class="sk-cube-grid">
@@ -68,28 +54,16 @@
             <div class="sk-cube sk-cube7"></div>
             <div class="sk-cube sk-cube8"></div>
             <div class="sk-cube sk-cube9"></div>
-            <p>chargements des WebAssemblies...</p>
+            <p>chargement des WebAssemblies...</p>
         </div>
-
-
     </div>
-
-
     <div id="blazor-error-ui">
         Erreur. Assurez vous d'utiliser TLS/HTTPS pour les contrôles d'intégrité. Certains navigateurs (anciens) peuvent
         ne pas supporter la technologie WebAssembly.
         <a href="" class="reload">Recharger la page</a>
         <a class="dismiss">🗙</a>
     </div>
-
-
-
     <script src="_framework/blazor.webassembly.js"></script>
 
-
-
-
-
 </body>
-
 </html>
