--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -15,12 +15,12 @@
                         'unsafe-eval';
              style-src 'self';
              upgrade-insecure-requests;">
-    <meta name="description" content="TAISEN Solutions : services en cybersécurité et DevSecOps">
+    <meta name="description" content="TAISEN Solutions : Conseil en sécurité des systèmes d’information">
     <meta property="og:title" content="TAISEN" />
     <meta property="og:url" content="https://taisen.fr/" />
     <meta property="og:image" content="https://taisen.fr/Images/Logov2.png" />
     <meta property="og:description"
-        content="Services en cybersécurité et DevSecOps, développement .NET, Méthode SIMPLE, Sensibilisations et Formations en sécurité des systèmes d'information" />
+        content="Conseil en sécurité des systèmes d’information" />
     <meta property="og:site_name" content="Taisen-Solutions" />
     <meta property="og:type" content="article" />
     <meta name="author" content="Michael Vacarella">
@@ -39,7 +39,6 @@
         <div class="bgDiv">
             <br>
             <h2>Une approche pragmatique et intelligente pour sécuriser votre système d'information</h2>
-            <img src="Images/Ok.png" class="imgLogo" alt="accompagnement">
             <p>
                 Taisen est une microentreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information
             </p>
