--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -40,7 +40,7 @@
             <br>
             <h2>Une approche pragmatique et intelligente pour sécuriser votre système d'information</h2>
             <p>
-                Taisen est une microentreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information
+                Taisen est une entreprise fondée en 2022. Cette structure me permet de vous accompagner pour la sécurisation de votre système d'information
             </p>
         </div>
         <div class="sk-cube-grid">
@@ -53,7 +53,6 @@
             <div class="sk-cube sk-cube7"></div>
             <div class="sk-cube sk-cube8"></div>
             <div class="sk-cube sk-cube9"></div>
-            <p>chargement des WebAssemblies...</p>
         </div>
     </div>
     <div id="blazor-error-ui">
